--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <modules>
         <module>chapter01</module>
+        <module>chapter02</module>
     </modules>
 
     <dependencyManagement>
@@ -24,6 +25,22 @@
                 <artifactId>hamcrest-core</artifactId>
                 <version>1.3</version>
             </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>1.9.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.objenesis</groupId>
+                <artifactId>com.springsource.org.objenesis</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>com.springsource.org.hamcrest.core</artifactId>
+                <version>1.1.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
